--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: hettest
 Type: Package
 Title: Testing for a Treatment Effect Using a Heterogeneous Surrogate Marker
 Version: 1.0
-Date: 2021-09-25
+Date: 2021-11-16
 Author: Layla Parast
-Maintainer: Layla Parast <parast@rand.org>
+Maintainer: Layla Parast <parast@austin.utexas.edu>
 Description: Provides functions to test for a treatment effect using surrogate marker information accounting for heterogeneity in the utility of the surrogate.
 License: GPL
 Imports: stats
